--- a/scss/main.scss
+++ b/scss/main.scss
@@ -805,27 +805,27 @@ body {
         }
         nav {
             margin-bottom: 15px;
-				}
+        }
 
         .social__link img {
             background-color: #14314b;
             border-radius: 50%;
-						margin-right: 15px;
-						transition: all 0.4s ease-in;
-				}
-				.social__link:hover img {
-					transform: scale(1.2);
-				}
+            margin-right: 15px;
+            transition: all 0.4s ease-in;
+        }
+        .social__link:hover img {
+            transform: scale(1.2);
+        }
 
         .link {
             color: #14314b;
             font-family: 'Oswald - Extra Light';
-						font-size: 25px;
-						transition: all 0.4s ease-in;
-						&:hover {
-							color: #0a1118;
-							font-size: 27px;
-						}
+            font-size: 25px;
+            transition: all 0.4s ease-in;
+            &:hover {
+                color: #0a1118;
+                font-size: 27px;
+            }
         }
     }
     .item:after {
@@ -840,4 +840,159 @@ body {
         border-right: 52px solid transparent;
         border-top: 152px solid #fff;
     }
+}
+
+// post5
+
+.post5 {
+    margin-top: 20px;
+}
+.post {
+    &__title {
+        font-family: 'Oswald - Heavy';
+        font-size: 72px;
+        line-height: 72px;
+        text-align: center;
+        text-transform: uppercase;
+        padding: 54px 0 49px 0;
+        box-shadow: 0 0 26px 3px rgba(103, 103, 103, 0.56);
+        background: repeating-linear-gradient(
+            -55deg,
+            #14304a,
+            #14304a 30px,
+            #173955 30px,
+            #173955 50px
+        );
+    }
+    &__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: #676767;
+		}
+		&__logo {
+			width: 370px;
+			padding: 41px 0 0 57px;
+		}
+
+    //hex
+    &__hexagon {
+				position: relative;
+				margin: -100px auto 0;
+        .hexagon--outer {
+            position: relative;
+            width: 720px;
+            height: 415.69px;
+            background-color: transparent;
+            margin: 207.85px 0;
+            border-left: solid 15px #616060;
+            border-right: solid 15px #616060;
+        }
+
+        .hexagon--outer:before,
+        .hexagon--outer:after {
+            content: '';
+            position: absolute;
+            z-index: 1;
+            width: 509.12px;
+            height: 509.12px;
+            -webkit-transform: scaleY(0.5774) rotate(-45deg);
+            -ms-transform: scaleY(0.5774) rotate(-45deg);
+            transform: scaleY(0.5774) rotate(-45deg);
+            background-color: inherit;
+            left: 90.4416px;
+        }
+
+        .hexagon--outer:before {
+            top: -254.5584px;
+            border-top: solid 21.2132px #616060;
+            border-right: solid 21.2132px #616060;
+        }
+
+        .hexagon--outer:after {
+            bottom: -254.5584px;
+            border-bottom: solid 21.2132px #616060;
+            border-left: solid 21.2132px #616060;
+        }
+
+        .hexagon {
+            position: relative;
+            position: absolute;
+            top: -190px;
+            width: 690px;
+            height: 398.37px;
+            margin: 199.19px 0;
+            background-image: url(../img/man11.jpg);
+            background-size: auto 750.5553px;
+            background-position: center;
+            border-left: solid 20px #ffffff;
+            border-right: solid 20px #ffffff;
+        }
+
+        .hexTop,
+        .hexBottom {
+            position: absolute;
+            z-index: 1;
+            width: 487.9px;
+            height: 487.9px;
+            overflow: hidden;
+            -webkit-transform: scaleY(0.5774) rotate(-45deg);
+            -ms-transform: scaleY(0.5774) rotate(-45deg);
+            transform: scaleY(0.5774) rotate(-45deg);
+            background: inherit;
+            left: 81.05px;
+        }
+
+        .hexTop:after,
+        .hexBottom:after {
+            content: '';
+            position: absolute;
+            width: 650px;
+            height: 375.2776749732568px;
+            -webkit-transform: rotate(45deg) scaleY(1.7321)
+                translateY(-187.6388px);
+            -ms-transform: rotate(45deg) scaleY(1.7321) translateY(-187.6388px);
+            transform: rotate(45deg) scaleY(1.7321) translateY(-187.6388px);
+            -webkit-transform-origin: 0 0;
+            -ms-transform-origin: 0 0;
+            transform-origin: 0 0;
+            background: inherit;
+        }
+
+        .hexTop {
+            top: -243.9518px;
+            border-top: solid 28.2843px #ffffff;
+            border-right: solid 28.2843px #ffffff;
+        }
+
+        .hexTop:after {
+            background-position: center top;
+        }
+
+        .hexBottom {
+            bottom: -243.9518px;
+            border-bottom: solid 28.2843px #ffffff;
+            border-left: solid 28.2843px #ffffff;
+        }
+
+        .hexBottom:after {
+            background-position: center bottom;
+        }
+
+        .hexagon:after {
+            content: '';
+            position: absolute;
+            top: 11.547px;
+            left: 0;
+            width: 650px;
+            height: 375.2777px;
+            z-index: 2;
+            background: inherit;
+        }
+		}
+
+		&__footer {
+			box-shadow: 0 0 26px 3px rgba(103, 103, 103, 0.56);
+background-color: #173955;
+		}
 }
