--- a/scss/main.scss
+++ b/scss/main.scss
@@ -869,16 +869,16 @@ body {
         flex-direction: column;
         justify-content: center;
         background-color: #676767;
-		}
-		&__logo {
-			width: 370px;
-			padding: 41px 0 0 57px;
-		}
+    }
+    &__logo {
+        width: 370px;
+        padding: 41px 0 0 57px;
+    }
 
     //hex
     &__hexagon {
-				position: relative;
-				margin: -100px auto 0;
+        position: relative;
+        margin: -100px auto 10px;
         .hexagon--outer {
             position: relative;
             width: 720px;
@@ -989,10 +989,38 @@ body {
             z-index: 2;
             background: inherit;
         }
-		}
+    }
 
-		&__footer {
-			box-shadow: 0 0 26px 3px rgba(103, 103, 103, 0.56);
-background-color: #173955;
-		}
+    &__footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        padding: 17px 58px 30px 58px;
+        box-shadow: 0 0 26px 3px rgba(103, 103, 103, 0.56);
+        background-color: #173955;
+    }
+    &__text {
+        font-family: 'Oswald - Extra Light';
+        font-size: 51px;
+        text-transform: uppercase;
+    }
+    &__social {
+        display: flex;
+
+        li {
+            margin-right: 15px;
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+    }
+    &__link {
+        font-family: 'Oswald - Extra Light';
+        font-size: 25px;
+        text-transform: uppercase;
+        margin-top: 15px;
+        a {
+            color: #ffffff;
+        }
+    }
 }
