--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1008,10 +1008,14 @@ body {
         display: flex;
 
         li {
-            margin-right: 15px;
+						margin-right: 15px;
+						transition: all 0.5s ease-in;
             &:last-child {
                 margin-right: 0;
-            }
+						}
+						&:hover img {
+							transform: translateY(-10px);
+						}
         }
     }
     &__link {
@@ -1020,7 +1024,11 @@ body {
         text-transform: uppercase;
         margin-top: 15px;
         a {
-            color: #ffffff;
+						color: #ffffff;
+						transition: all 0.5s ease-in;
+						&:hover {
+							color: #14314b;
+						}
         }
     }
 }
